@@ -1,6 +1,8 @@
 ### To do list: ###
 
-* nothing
+* remove ID in database tables
+* add a thread to handle plots
+* add a window to ask to retry internet connection
 
   
 ### To fix list: ###
@@ -19,6 +21,8 @@
   * ADDED:
     * new log messages have been added.
     * a new weather icon has been added.
+    * a new window has been added to ask the user if he wants to retry a new connexion to internet in case of no
+    connexion detection.
 
   * MODIFIED:
     * database has been modified to allow NULL data.
